--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   cupertino_icons: ^0.1.3
   sliding_up_panel: ^1.0.2
   google_fonts: ^1.1.0
+  # Service
+  email_validator: ^1.0.4
+  provider: ^4.1.3
+  # Firebase
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.7
 
 dev_dependencies:
   flutter_test:
